Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77804

Building apps for iOS simulator fails due to pulling in device sysroot and libs

XMLWordPrintable

    • iOS/tvOS/watchOS
    • 97465b1540ebd095225679b5dd400b2d4d54e678 (qt/qtbase/5.13.1) 7b82d27429cde931114776f1a26f4c3850c8bb72 (qt/qtbase/5.12.5) abfb1b8665923ce2824392f3a04e5e4ac3871017 (qt/qtbase/5.12.5)

      Not sure when, but somewhere on the path to using absolute library paths we dragged in absolute library paths into the prl files and Xcode projects generated for Qt for iOS. This is a problem since these prl files and build files are used for both simulator and device builds, so trying to build for x86_64 when you then have hard-coded paths to  /Applications/Xcode11.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS13.0.sdk/usr/lib/libz.tbd  is a problem

        1. libQt5Core_debug.prl
          2 kB
          Tor Arne Vestbø
        2. libQt5Core.prl
          2 kB
          Tor Arne Vestbø
        3. libQt5Gui_debug.prl
          2 kB
          Tor Arne Vestbø
        4. libQt5Gui.prl
          2 kB
          Tor Arne Vestbø
        5. libQt5Widgets_debug.prl
          2 kB
          Tor Arne Vestbø
        6. libQt5Widgets.prl
          2 kB
          Tor Arne Vestbø
        7. project.pbxproj
          27 kB
          Tor Arne Vestbø
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            vestbo Tor Arne Vestbø
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes