Don't add default lib dirs to LIBRARY_SEARCH_PATHS in xcode projects

Having hard-coded absolute paths in the xcode project breaks switching
between iOS and simulator builds.

Fixes: QTBUG-77804
Change-Id: Ib655bfc774b92c413a7b94ba4d005b6e1c4d2905
(cherry picked from commit 97465b1540ebd095225679b5dd400b2d4d54e678)
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>