qmake/generators/mac/pbuilder_pbx.cpp
@@ -875,6 +875,7 @@ ProjectBuilderMakefileGenerator::writeMakeParts(QTextStream &t)
     }
 
     if(!project->isActiveConfig("staticlib")) { //DUMP LIBRARIES
+        const ProStringList defaultLibDirs = project->values("QMAKE_DEFAULT_LIBDIRS");
         ProStringList &libdirs = project->values("QMAKE_PBX_LIBPATHS"),
               &frameworkdirs = project->values("QMAKE_FRAMEWORKPATH");
         static const char * const libs[] = { "LIBS", "LIBS_PRIVATE",
@@ -967,8 +968,10 @@ ProjectBuilderMakefileGenerator::writeMakeParts(QTextStream &t)
                     }
                     if(slsh != -1) {
                         const QString path = QFileInfo(library.left(slsh)).absoluteFilePath();
-                        if(!path.isEmpty() && !libdirs.contains(path))
+                        if (!path.isEmpty() && !libdirs.contains(path)
+                            && !defaultLibDirs.contains(path)) {
                             libdirs += path;
+                        }
                     }
                     library = fileFixify(library, FileFixifyFromOutdir | FileFixifyAbsolute);
                     QString key = keyFor(library);
